--- a/components/commonGood/commonGood.wxss
+++ b/components/commonGood/commonGood.wxss
@@ -98,12 +98,18 @@
 
 .common-good .name-tag {
   display:flex;
-  justify-content:space-between;
+  /* justify-content:space-between; */
   align-items:center;
   padding-right:48px;
 }
-
-.common-good .tag {
+.tag {
+  border: 1px solid rgb(242, 130, 106, 0.4);
+  padding: 2px 6px;
+  border-radius: 2px;
+  color: rgb(242, 130, 106);
+  margin-left: 8px;
+}
+.common-good {
   font-size: 12px;
   color: #999;
 }
