--- a/components/commonDetail/commonDetail.wxml
+++ b/components/commonDetail/commonDetail.wxml
@@ -1,6 +1,6 @@
 <view class="common-detail">
   <slot></slot>
-  <view wx:for="{{attributes}}" wx:key="{{index}}">
+  <view wx:for="{{attributes}}" wx:key="index">
     <view class="console" wx:if="{{detail[item.key] && detail[item.key] != 0}}">
       <view class="key">{{item.name}}</view>
       <view class="value">{{detail[item.key]}}</view>
