--- a/components/dsTabs/ds-tabs.wxml
+++ b/components/dsTabs/ds-tabs.wxml
@@ -1,3 +1,3 @@
 <scroll-view scroll-with-animation="{{true}}" scroll-left="{{scrollLeft}}" scroll-x style="width: 100%;" class="ds-tabs">
-  <view bindtap="selectTab" class="ds-tab {{currentTab === item._id ? 'ds-tab-selected' : ''}}" data-index="{{index}}" data-type="{{item._id}}" wx:for="{{tabs}}" wx:key="{{item._id}}">{{item.name}}</view>
+  <view bindtap="selectTab" class="ds-tab {{currentTab === item._id ? 'ds-tab-selected' : ''}}" data-index="{{index}}" data-type="{{item._id}}" wx:for="{{tabs}}" wx:key="_id">{{item.name}}</view>
 </scroll-view>
