--- a/pages/natureInfoDetail/main.wxml
+++ b/pages/natureInfoDetail/main.wxml
@@ -1,17 +1,18 @@
 <view class="nature-intro-detail">
   <scroll-view scroll-y="{{true}}" class="view">
-    <common-good wx:if="{{item}}" good="{{item}}" hasFeedback="{{true}}">
+    <common-good wx:if="{{natureInfo}}" good="{{natureInfo}}" hasFeedback="{{true}}">
       <view class="attrs">
-        <view class="attr-contanier" wx:if="{{item.attr[0] && item.attr[0] !== '0'}}"><view class="aggressivity">攻击力</view>
-          <view class="attr-value">{{item.attr[0]}}</view>
+        <view class="attr-contanier" wx:if="{{natureInfo.damage}}">
+          <view class="aggressivity">攻击力</view>
+          <view class="attr-value">{{natureInfo.damage}}</view>
         </view>
-        <view class="attr-contanier" wx:if="{{item.attr[1] && item.attr[1] !== '0'}}"><view class="durable">耐久</view>
-          <view class="attr-value" wx:if="{{item.attr[1] == 10001}}">无限</view>
-          <view class="attr-value" wx:else>{{item.attr[1]}}</view>
+        <view class="attr-contanier" wx:if="{{natureInfo.durable}}">
+          <view class="durable">耐久</view>
+          <view class="attr-value">{{natureInfo.durable}}</view>
         </view>
       </view>
     </common-good>
-    <view class="detail-container">
+    <!-- <view class="detail-container">
       <view class="detail">
         <view class="origin-tip" wx:if="{{origins.length > 0}}">来源</view>
         <view class="materials" wx:if="{{origins.length > 0}}">
@@ -27,7 +28,13 @@
         </view>
         <common-detail console="{{item.console}}" desc="{{item.desc}}"></common-detail>
       </view>
-    </view>
+    </view> -->
     <!-- <ad unit-id="adunit-e88e140d1a0f8613"></ad> -->
+    <detail-container attributes="{{attributes}}" detail="{{natureInfo}}">
+      <view>
+        <composition title="来源" wx:if="{{hasOrigin}}" size="{{size}}" composition="{{natureInfo.origin}}"></composition>
+        <composition title="可制作科技" wx:if="{{hasCreate}}" size="{{size}}" composition="{{natureInfo.createScience}}"></composition>
+      </view>
+    </detail-container>
   </scroll-view>
 </view>
