--- a/pages/science/main.wxml
+++ b/pages/science/main.wxml
@@ -3,7 +3,7 @@
   <scroll-view scroll-top="{{scrollTop}}" class="view" scroll-y>
     <common-good wx:if="{{currentGoods.length > 0}}" bind:click="toDetail" wx:for="{{currentGoods}}" good="{{item}}" wx:key="{{item._id}}" type="science">
       <view class="attrs">
-        <view class="attr-contanier" wx:if="{{item.damage}}"><view class="aggressivity">攻击力</view>
+        <view class="attr-contanier" wx:if="{{item.damage}}"><view class="aggressivity">伤害</view>
           <view class="attr-value">{{item.damage}}</view>
         </view>
         <view class="attr-contanier" wx:if="{{item.durable}}"><view class="durable">耐久</view>
