--- a/pages/scienceDetail/main.wxml
+++ b/pages/scienceDetail/main.wxml
@@ -2,7 +2,7 @@
   <scroll-view scroll-y="{{true}}" class="view">
     <common-good good="{{item}}" hasFeedback="{{true}}">
       <view class="attrs">
-        <view class="attr-contanier" wx:if="{{item.damage}}"><view class="aggressivity">攻击力</view>
+        <view class="attr-contanier" wx:if="{{item.damage}}"><view class="aggressivity">伤害</view>
           <view class="attr-value">{{item.damage}}</view>
         </view>
         <view class="attr-contanier" wx:if="{{item.durable}}"><view class="durable">耐久</view>
