fix: 人物标题版本显示

--- a/components/composition/composition.wxml
+++ b/components/composition/composition.wxml
@@ -2,6 +2,6 @@
 <view class="ds-materials">
   <view class="ds-material" wx:for="{{composition}}" wx:key="index">
     <image style="width:{{size + 'px'}};height: {{size + 'px'}}" wx:if="{{item.item && item.item.src}}" data-item="{{item}}" bindtap="toImgDetail" class="ds-material-img" src="{{imgDomain+item.item.src}}"alt="" mode="aspectFit" />
-    <view wx:if="{{item && item.num && item.num != 0}}">x {{item.num}}</view>
+    <view wx:if="{{item && item.num && item.num != 0 && showNumber}}">x {{item.num}}</view>
   </view>
 </view>
