--- a/components/detail-container/detail-container.wxml
+++ b/components/detail-container/detail-container.wxml
@@ -1,7 +1,7 @@
 <view class="ds-detail-container">
   <view class="ds-detail">
     <technology wx:if="{{technology.length}}" technology="{{technology}}"></technology>
-    <composition wx:if="{{composition.length}}" composition="{{composition}}"></composition>
+    <composition showNumber="{{showNumber}}" wx:if="{{composition.length}}" composition="{{composition}}"></composition>
     <slot></slot>
     <common-detail attributes="{{attributes}}" detail="{{detail}}"></common-detail>
   </view>
