style: 首页样式重构

--- a/app.wxss
+++ b/app.wxss
@@ -9,7 +9,7 @@
   box-sizing: border-box;
 } 
 .long-text {
-  display: inline-block !important;
+  display: block;
   overflow: hidden;
   text-overflow:ellipsis;
   white-space: nowrap;
