--- a/components/searchInput/searchInput.wxss
+++ b/components/searchInput/searchInput.wxss
@@ -2,6 +2,7 @@
   /* background-color:#37474f; */
   user-select: none;
   width: 100%;
+  border-bottom: 1rpx solid rgba(178,186,194,.35);
 }
 input::input-placeholder {
   color: #999;
