--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -2,7 +2,7 @@
   <!-- <header-item navH="{{navH}}"></header-item> -->
   <view class="fixed-item" wx:if="{{isFixed}}">
     <searchInput bindtap="toSearch" marginRight="{{marginRight}}" top="{{marginRight}}" width="{{width}}" isReadonly="true"/>
-    <i-tabs color="#f5f5f5" i-class="article-tabs" current="{{currentArticleType}}" scroll bindchange="handleChangeScroll">
+    <i-tabs color="#009688" i-class="article-tabs" current="{{currentArticleType}}" scroll bindchange="handleChangeScroll">
       <i-tab i-class="article-tab" wx:for="{{articleTabs}}" key="{{item.type}}" wx:key="type" title="{{item.label}}"></i-tab>
     </i-tabs>
   </view>
@@ -15,7 +15,7 @@
         <view class="tab-name">{{item.name}}</view>
       </view>
     </view>
-    <i-tabs color="#f5f5f5" i-class="article-tabs" current="{{currentArticleType}}" scroll bindchange="handleChangeScroll">
+    <i-tabs color="#009688" i-class="article-tabs" current="{{currentArticleType}}" scroll bindchange="handleChangeScroll">
       <i-tab i-class="article-tab" wx:for="{{articleTabs}}" key="{{item.type}}" wx:key="type" title="{{item.label}}"></i-tab>
     </i-tabs>
     <view class="articles">
@@ -23,16 +23,10 @@
         wx:for="{{articles}}"
         wx:key="_id"
         data-id="{{item._id}}"
-        bindtap="toArticleDetail"
-        style="border-color: {{borderColors[index % 6]}}">
-        <image class="article-img" lazy-load="{{true}}" src="{{item.src + '?x-oss-process=style/width-180'}}" mode="aspectFill"></image>
-        <view class="text">
-          <view class="title long-text">{{item.title}}</view>
-          <view class="article-footer">
-            <i-icon type="browse" size="20" /><view class="author long-text">{{item.views}}</view>
-            <i-icon type="mine" size="20" style="padding-left:4px;"/><view class="time long-text">{{item.author}}</view>
-          </view>
-        </view>
+        bindtap="toArticleDetail">
+        <text class="article-author-time" decode="true">{{item.time}}&ensp;&ensp;&ensp;&ensp;{{item.author}}</text>
+        <view class="article-title long-text">{{item.title}}</view>
+        <image class="article-img" lazy-load="{{true}}" src="{{item.src}}" mode="aspectFill"></image>
       </view>
       <view class="bottom-tip" wx:if="{{loading}}">加载中...</view>
       <view class="bottom-tip" wx:if="{{loaded && pageDatas.length === 0}}">没有更多数据</view>
