--- a/components/commonDetail/commonDetail.wxml
+++ b/components/commonDetail/commonDetail.wxml
@@ -1,21 +1,28 @@
 <view class="common-detail">
   <slot></slot>
-  <view wx:for="{{attributes}}" wx:key="index">
-    <view class="console">
-      <view class="key">{{item.name}}</view>
-      <view class="value" wx:if="{{item.handleData}}">
-        {{item.handleData(detail[item.key])}}
+  <i-collapse name="{{name}}">
+    <i-collapse-item title="" name="name1">
+    <view slot="content">
+      <view wx:for="{{attributes}}" wx:key="index">
+        <view class="console">
+          <view class="key">{{item.name}}</view>
+          <view class="value" wx:if="{{item.handleData}}">
+            {{item.handleData(detail[item.key])}}
+          </view>
+          <view wx:if="{{detail[item.key] && !item.handleData}}" class="value">{{detail[item.key]+item.unit|| ''}}</view>
+        </view>
       </view>
-      <view wx:if="{{detail[item.key] && !item.handleData}}" class="value">{{detail[item.key]+item.unit|| ''}}</view>
+      <view class="console" wx:if="{{detail.console}}" >
+        <view class="key"> 生成代码</view>
+        <view class="value" bindtap="copyNumber" data-content="{{detail.console}}">
+          <view>{{detail.console}}</view>
+          <view class="copy-number">复制</view>
+        </view>
+      </view> 
     </view>
-  </view>
-  <view class="console" wx:if="{{detail.console}}" >
-    <view class="key"> 生成代码</view>
-    <view class="value" bindtap="copyNumber" data-content="{{detail.console}}">
-      <view>{{detail.console}}</view>
-      <view class="copy-number">复制</view>
-    </view>
-  </view>
+    </i-collapse-item>
+  </i-collapse>
+  
   <view class="description">
     <view class="title">介绍</view>
     <wemark md="{{detail.introduce}}" link highlight type="wemark"></wemark>
