--- a/pages/findFriend/main.wxss
+++ b/pages/findFriend/main.wxss
@@ -1,13 +1,13 @@
 page {
   height: 100%;
   width: 100%;
-  background-color: #37474f;
+  /* background-color: #37474f; */
   font-family: Avenir,Helvetica,Arial,sans-serif;
 }
 .find-friend {
   height: 100%;
   width: 100%;
-  background-color: #37474f;
+  /* background-color: #37474f; */
   position: relative
 }
 
@@ -15,7 +15,7 @@ page {
   position: absolute;
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
-  background-color: #37474f;
+  /* background-color: #37474f; */
   width: 100%;
   top: 42px;
   height: 100%
@@ -35,7 +35,7 @@ page {
 .find-friend .friends .friend {
   position: relative;
   border-left: 4px solid;
-  background-color: #212121;
+  /* background-color: #212121; */
   padding: 12px;
   justify-content: flex-start;
   margin-bottom: 6px;
